# pysctp

./: MANIFEST.in  Makefile  README  README.txt  VERSION  _sctp.c  _sctp.h  build_dependencies.sh  pyproject.toml  sctp.py  sctp_echo_srv.py  setup.py  test_local_cnx.py  test_loopback.py  test_remote_cnx.py
.github/workflows/: wheels.yml
